--- a/app/scripts/UserList/userListTemplate.html
+++ b/app/scripts/UserList/userListTemplate.html
@@ -13,7 +13,7 @@
       <div class = "center-block col-sm-12">
         <ul class= "list-group">
           <li class="list-group-item" ng-repeat="user in userList.users track by $index">
-            <a ui-sref="login({login:user.login})"><img  ng-src="{{user.avatar_url}}" width="100px" height="100px"></a>
+            <a ui-sref="login({login:user.login})"><img  ng-src="{{user.avatar_url}}" class="img-responsive img-thumbnail" width="100px" height="100px"></a>
             <span ><a ui-sref="login({login:user.login})">{{user.login}}</a></span>
         </ul>
         <div class="text-center" ng-hide="userList.isSearched">
